--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ path = "src/lib.rs"
 serde = "1.0.193"
 rand = "0.8.5"
 criterion = "0.5.1"
+crc32c = "0.6"
+thiserror = "1.0.56"
+memoffset = "0.9.0"
+num-traits = "0.2"
+num-derive = "0.4"
+
 
 [[bench]]
 name = "lsm_benchmark"
