--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "1.0.56"
 memoffset = "0.9.0"
 num-traits = "0.2"
 num-derive = "0.4"
+tinyvec = { version = "1.6.0", features = ["alloc"]}
 
 
 [[bench]]
