--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ memoffset = "0.9.0"
 num-traits = "0.2"
 num-derive = "0.4"
 tinyvec = { version = "1.6.0", features = ["alloc"]}
+tempfile = "3.2.0"
 
 
 [[bench]]
